Fixed Center contact icon and heading on mobile screens

--- a/css/contact.css
+++ b/css/contact.css
@@ -50,3 +50,11 @@
         text-align: center;
     }
 }
+@media (max-width: 768px) {
+    .mrn-l-contact-icons {
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
